--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -38,36 +38,45 @@
     list-style: none;
 }
 
-.rightbarFriend{
+.rightbarTitle{
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.rightbarInfo{
+    margin-bottom: 30px;
+}
+
+
+.rightbarInfoItem{
+    margin-bottom: 10px;
+}
+
+.rightbarInfoKey{
+    font-weight: 500;
+    margin-right: 15px;
+    color:#555 ;
+}
+
+.rightbarInfoValue{
+    font-weight: 300;
+}
+
+.rightbarFollowings{
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+}
+
+.rightbarFollowing{
     display: flex;
-    align-items: center;
-    margin-bottom: 15px;
+    flex-direction: column;
+    
 }
-.rightbarProfileImgContainer{
-    margin-right: 10px;
-    position: relative;
-}
-
-.rightbarProfileImg{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-left: 20px;
+.rightbarFollowing{
+    width: 100px;
+    height: 100px;
     object-fit: cover;
-}
-
-.rightbarOnline{
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: green;
-    position: absolute;
-    object-fit: cover;
-    top: -2px;
-    right: 0;
-    border: 2px solid white;
-}
-
-.rightbarUsername{
-    font-weight: 50;
+    border-radius: 10px;
 }
